Thu Oct 19 17:25:16 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Integer_Truncate_Test.cpp:

          Removed redundant parentheses.

Thu Oct 19 15:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
	  Updated doxygen version

	* bin/MakeProjectCreator/templates/gnu.mpb:
	  Removed kylix support

Thu Oct 19 13:19:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/OS_main.h:
	  Added main for rtems

Thu Oct 19 11:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/Rtems_init.c:
	  Fixed empty translation unit warnings

Thu Oct 19 08:27:12 UTC 2006  Martin Corino  <mcorino@remedy.nl>

	* include/makeinclude/platform_openvms.GNU:
      	  Small change to create hardlinks for produced executables.

Wed Oct 18 16:19:38 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * contrib/minizip/minizip.suo
        * contrib/minizip/miniziplibrarycode.suo
          Removed these files.

Wed Oct 18 13:52:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* include/makeinclude/platform_rtems.x_g++.GNU:
	  Major cleanup of old stuff and always define ACE_HAS_RTEMS

	* etc/rtems_init.c:
	* ace/rtems_init.c:
	  Another move, for rtems we require some functions to always
	  be available, this defines our network settings and much more.
	  Because we always build static, we moved this to the ACE lib,
	  on rtems we define ACE_HAS_RTEMS and then compile the contents
	  of this file. This way the functions in this file are available
	  in any executable we link

	* ace/OS.h:
	* ace/os_include/os_signal.h:
	* ace/os_include/sys/os_types.h:
	* ace/OS_NS_stdio.h:
	* ace/OS_NS_time.inl:
	  Replaced __rtems__ with ACE_HAS_RTEMS

	* ace/ace.mpc:
	  Added rtems_init.c

Wed Oct 18 13:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* include/makeincludes/rules.bin.GNU:
	* include/makeincludes/rules.lib.GNU:
	* include/makeincludes/wrapper_macros.GNU: