@@ -1,3 +1,13 @@
+Thu Oct 19 22:58:02 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>
+
+        * ace/Truncate.h:
+        
+          Borland compilers currently cannot handle the template
+          meta-programming in this header.  Work around the limitation by
+          explicitly specializing the ACE_Utils::Truncator<> structure
+          template for a select few 32- and 64-bit integers.  More will be
+          added as needed.
+
 Thu Oct 19 17:25:16 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>
 
         * tests/Integer_Truncate_Test.cpp:
